# django-agenda-oscar

./: .coveragerc  .gitignore  .gitlab-ci.yml  .hgignore  AUTHORS  CHANGELOG.rst  LICENSE.rst  Makefile  README.rst  requirements.txt  runtests  setup.cfg  setup.py  tox.ini
django_agenda/: .gitignore  __init__.py  apps.py  models.py  runtests.py  signals.py  tests.py  time_span.py
django_agenda/management/commands/: clear_occurrences.py  clear_old_slots.py  recreate_time_slots.py
django_agenda/migrations/: 0001_initial.py  0002_index.py  0003_padding.py  0004_rewrite.py
django_schedule/: apps.py  runtests.py  signals.py  tests.py
django_schedule/migrations/: 0001_initial.py
docs/: .gitignore  conf.py  getting_started.rst  index.rst  settings.py
tests/: .readthedocs.yml  __init__.py  admin.py  apps.py  demo_settings.py  migrate_settings.py  models.py  root_urls.py  settings.py  signals.py  test_availabilities.py  test_booking.py  test_commands.py  test_generation.py  test_occurences.py  urls.py
