[metadata]
name = django-agenda
author = Alan Trick
author-email = me@alantrick.ca
summary = A scheduling app for Django
description-file = README.rst
home-page = https://gitlab.com/alantrick/django-agenda
requires-python = >=3.6
project_urls =
    Bug Tracker = https://gitlab.com/alantrick/django-agenda/issues
    Documentation = http://django-agenda.readthedocs.io/en/latest/
    Source Code = https://gitlab.com/alantrick/django-agenda
license = LGPL
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Framework :: Django
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11
    Topic :: Utilities
    Topic :: Office/Business :: Scheduling
keyword =
    scheduling
    calendar
    availability

[files]
packages =
    django_agenda

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
  setup.py
  tests/*
  django_agenda/migrations/*

[build_sphinx]
builders = html
source-dir = docs/
build-dir = docs/_build
all-files = 1

[bdist_wheel]
universal = 1

[isort]
line_length=79
known_first_party = django_agenda,tests

[extras]
test =
    pytest
    pytest-django
    pytest-cov
    pytest-pythonpath
    tox
    pyyaml
docs =
    sphinx

