[metadata]
name = django-agenda
version = attr: django_agenda.VERSION
description = A scheduling app for Django
long_description = file: README.rst, CHANGELOG.rst
keywords = scheduling, calendar, availability
license = LGPL3+
author = Alan Trick
author-email = me@alantrick.ca
url = https://gitlab.com/alantrick/django-agenda
project_urls =
    Bug Tracker = https://gitlab.com/alantrick/django-agenda/issues
    Documentation = https://alantrick.gitlab.io/django-agenda/
    Source Code = https://gitlab.com/alantrick/django-agenda
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Framework :: Django
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11
    Topic :: Utilities
    Topic :: Office/Business :: Scheduling

[options]
packages = find:
python_requires = >=3.6
install_requires =
  Django>=1.10
  django-recurrence
  django-timezone-field
  pytz
tests_require =

[options.packages.find]
exclude = tests

[options.extras_require]
docs = sphinx
       sphinx_rtd_theme
test = pytest; pytest-django; pytest-cov; pytest-pythonpath; tox; pyyaml

[flake8]
select = C,E,F,W,B,B950
ignore = W503,E501  # use B950 instead
exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,build
